template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: <your-private-registry>/myapp:v1
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: myregistrykey
